--- a/about.html
+++ b/about.html
@@ -133,22 +133,18 @@
           <p class="lead my-3">
             The first online edition of Amity International Model United Nations
             is a simulation of the United Nations spanning over two days. At
-            AMIMUN, delegates gain in-depth knowledge of diplomacy,
-            international relations, and the inner workings of the United
-            Nations. Through the past Nine Editions, AMIMUN has set a standard
-            of MUNs throughout the Nation with its innovative themes, by keeping
-            the focus on pertinent issues and stellar level of debate. To
-            continue the same legacy, the first online edition of AMIMUN will
-            create a platform where deliberation on issues that address global
-            problems and drafting resolutions, will enhance critical thinking,
-            public speaking, and leadership skills. The combination of in-depth
-            research and the understanding of others' opinions from interactions
-            among multitudes of other young minds from various backgrounds,
-            gives the delegates a deeper insight into the real-world problems.
-            They also become aware of the causes of conflict between nations.
-            Thus, AMIMUN follows through with the Preamble to the Charter of the
-            United Nations: "To practice tolerance and live together in peace
-            with one another as good neighbors”
+            AMIMUN, delegates gain profound knowledge of diplomacy, global
+            relations, and the inner workings of the United Nations. Through the
+            past Nine Editions, AMIMUN has set a standard of MUNs throughout the
+            Nation with its innovative themes. To continue the same legacy, the
+            first online edition of AMIMUN aims to create a platform where
+            deliberation on issues that address global problems and drafting
+            resolutions will enhance critical thinking, public speaking, and
+            leadership skills. Delegates will become conscious of the causes of
+            conflict between nations. Thus, AMIMUN follows through with the
+            Preamble to the Charter of the United Nations: "To practice
+            tolerance and live together in peace with one another as good
+            neighbors”.
           </p>
         </div>
       </div>
@@ -171,7 +167,7 @@
               The Secretariat of Amity International Model United Nations
               Conference consists of people who have consistently proven
               themselves as hardworking, committed, and knowledgeable. Each
-              person is selected for ensuring AMIMUN's ideals are upheld and
+              person is selected ensuring, AMIMUN's ideals are upheld and
               executed with the utmost dedication. The secretariat ensures the
               smooth running of all the committees while maintaining the highest
               level of hospitality. Thus, we remain committed to the promise of
@@ -193,12 +189,12 @@
             </h2>
             <p class="lead">
               Amity University takes the honor of being an institute where
-              several people, from various backgrounds, interact and work with
-              one another. AMIMUN staying on the same ideal has created an
+              several people from various backgrounds interact and work with one
+              another. AMIMUN staying on the same ideal has created an
               international platform, where ideas, opinions, and views are
-              propagated. The same is corroborated by international delegations
-              and past collaborations with organizations such as the United
-              Nations Information Centre for India and Bhutan, Amnesty
+              propagated. The same is promoted by participation of international
+              delegates and past collaborations with organizations such as the
+              United Nations Information Centre for India and Bhutan, Amnesty
               International, and Doctors Without Borders, to effectively impart
               the knowledge of global affairs, diplomacy, and international
               policy to the students and to add authenticity to the experience.
@@ -251,11 +247,10 @@
               <span class="text-muted">Up Ingenuity</span>
             </h2>
             <p class="lead">
-              In the past nine editions, AMIMUN has effectively created a
-              platform where delegates have had the option to master and refine
-              their strategy abilities. The online version of AMIMUN will
-              encourage the basic and substitute manner of thinking to
-              unexpectedly create answers for some grave world issues.
+              AMIMUN has successfully created a platform where delegates have
+              had the option to master and refine their strategic abilities. The
+              online version of AMIMUN will encourage the manner of thinking to
+              create solutions for some grave world issues.
             </p>
           </div>
           <div class="col-md-5 order-md-1">
@@ -319,9 +314,9 @@
               <span class="text-muted">Excellence</span>
             </h2>
             <p class="lead">
-              University strives for the uncompromising quality and highest
-              standard of excellence in teaching, learning, research and
-              scholarship across various disciplines.
+              Amity University strives for the uncompromising quality and
+              highest standard of excellence in teaching, learning, research,
+              and scholarship across various disciplines.
             </p>
           </div>
           <div class="col-md-5">
@@ -342,9 +337,9 @@
               <span class="text-muted"> & Ethics </span>
             </h2>
             <p class="lead">
-              University upholds the highest ethical values, integrity and
-              professionalism and an unwavering commitment to academic freedom,
-              transparency and accountability.
+              Amity University upholds the highest ethical values, integrity and
+              professionalism, and an unwavering commitment to academic freedom,
+              transparency, and accountability.
             </p>
           </div>
           <div class="col-md-5 order-md-1">
@@ -383,13 +378,13 @@
         <div class="row featurette">
           <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading">
-              Expand Horizons
+              Expanding Horizons
               <span class="text-muted">Of Knowledge</span>
             </h2>
             <p class="lead">
-              University is driven by research and innovation and ensures
-              continuous engagement in the scholarly activities in the pursuit
-              of innovation, creativity and excellence.
+              Amity University is driven by research and innovation and ensures
+              continuous engagement in scholarly activities when in pursuit of
+              change, creativity, and excellence.
             </p>
           </div>
           <div class="col-md-5 order-md-1">
@@ -409,10 +404,10 @@
               Shared <span class="text-muted">Governance</span>
             </h2>
             <p class="lead">
-              University encourages shared decision-making through a process
-              that rests upon collaborative consultation, open flow of
-              information, diverse involvement and collective deliberations of
-              all stake holders.
+              Amity University encourages shared decision-making through a
+              process that rests upon collaborative consultation, open flow of
+              information, diverse involvement, and collective deliberations of
+              all stakeholders.
             </p>
           </div>
           <div class="col-md-5">
@@ -432,9 +427,9 @@
               <span class="text-muted">Responsibility</span>
             </h2>
             <p class="lead">
-              University creates and nurtures an inclusive environment where
-              every one can develop their full potential and contribute to the
-              interest of the society as a whole.
+              Amity University creates and nurtures an inclusive environment
+              where everyone can develop to their full potential and contribute
+              to the interest of society as a whole
             </p>
           </div>
           <div class="col-md-5 order-md-1">
@@ -454,7 +449,7 @@
               Environmental <span class="text-muted">Responsibility</span>
             </h2>
             <p class="lead">
-              University is acutely aware of its environmental responsibilities
+              Amity University is acutely aware of its environmental responsibilities
               and embraces principle of sustainable development to ensure that
               any adverse environmental impact of its activities is minimized.
             </p>
@@ -473,10 +468,10 @@
           <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading">Service</h2>
             <p class="lead">
-              University seeks to serve the diverse, personal and professional
-              development needs of its constituents and encourage habit of
+              Amity University seeks to serve the diverse, personal and professional
+              development needs of its constituents and encourage the habit of
               engagement, caring, and civic responsibility by emphasizing a
-              connect between service, excellence, and career growth.
+              connection between service, excellence, and career growth.
             </p>
           </div>
           <div class="col-md-5 order-md-1">
