--- a/contact.html
+++ b/contact.html
@@ -154,8 +154,9 @@
                   class="w-100 card-img-top"
                 />
                 <div class="p-4">
-                  <h5 class="mb-0">Mark Rockwell</h5>
-                  <p class="small text-muted">CEO - Consultant</p>
+                  <h5 class="mb-0">Simran Malhotra</h5>
+                  <p class="small text-muted">Phone:</p>
+                  <p class="small text-muted">Email:</p>
                   <ul class="social mb-0 list-inline mt-3">
                     <li class="list-inline-item m-0">
                       <a href="#" class="social-link"
@@ -193,8 +194,9 @@
                   class="w-100 card-img-top"
                 />
                 <div class="p-4">
-                  <h5 class="mb-0">Mark Rockwell</h5>
-                  <p class="small text-muted">CEO - Consultant</p>
+                  <h5 class="mb-0">Meshuwa K. Mawthoh</h5>
+                  <p class="small text-muted">Phone:</p>
+                  <p class="small text-muted">Email:</p>
                   <ul class="social mb-0 list-inline mt-3">
                     <li class="list-inline-item m-0">
                       <a href="#" class="social-link"
@@ -232,8 +234,9 @@
                   class="w-100 card-img-top"
                 />
                 <div class="p-4">
-                  <h5 class="mb-0">Mark Rockwell</h5>
-                  <p class="small text-muted">CEO - Consultant</p>
+                  <h5 class="mb-0">Simran Malhotra</h5>
+                  <p class="small text-muted">Phone:</p>
+                  <p class="small text-muted">Email:</p>
                   <ul class="social mb-0 list-inline mt-3">
                     <li class="list-inline-item m-0">
                       <a href="#" class="social-link"
@@ -271,8 +274,49 @@
                   class="w-100 card-img-top"
                 />
                 <div class="p-4">
-                  <h5 class="mb-0">Mark Rockwell</h5>
-                  <p class="small text-muted">CEO - Consultant</p>
+                  <h5 class="mb-0">Rohan Nagpal</h5>
+                  <p class="small text-muted">Phone:</p>
+                  <p class="small text-muted">Email:</p>
+                  <ul class="social mb-0 list-inline mt-3">
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-facebook-f"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-twitter"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-instagram"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-linkedin"></i
+                      ></a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+            <!-- Card-->
+            <div class="card shadow-lg border-0 rounded">
+              <div class="card-body p-0">
+                <img
+                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-2_ujssbj.jpg"
+                  alt=""
+                  class="w-100 card-img-top"
+                />
+                <div class="p-4">
+                  <h5 class="mb-0">Sonali Thakur</h5>
+                  <p class="small text-muted">Phone:</p>
+                  <p class="small text-muted">Email:</p>
                   <ul class="social mb-0 list-inline mt-3">
                     <li class="list-inline-item m-0">
                       <a href="#" class="social-link"
