--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
       <div class="container-fluid">
         <a class="navbar-brand mx-1" href="index.html"
           ><img src="./static/logo-main.svg" width="55px" alt=""
+        /></a> | <a class="navbar-brand mx-1" href="index.html"
+          ><img src="./static/logo-header-scaled.svg" width="305px" alt=""
         /></a>
         <button
           class="navbar-toggler"
@@ -166,7 +168,7 @@
               <div class="carousel-caption text-start">
                 <h1>
                   Winds of Change: Navigating through a new normal in the
-                  Multipolar World
+                  multipolar world
                 </h1>
                 <p></p>
                 <p>
@@ -217,7 +219,7 @@
 
             <div class="container">
               <div class="carousel-caption text-end">
-                <h1>Glimps of AMIMUN 2020</h1>
+                <h1>Glimpse of AMIMUN 2020</h1>
                 <p></p>
                 <p>
                   <a
@@ -280,13 +282,13 @@
                 actuated and go into the correct direction, I invite you to the
                 first edition of online
                 <b>Amity International Model United Nations, (AMIMUN '21)</b> on
-                Saturday, March 20 th to Sunday, March 21 st ,20201. By
+                Saturday, March 20th to Sunday, March 21st ,2021.<br /> By
                 following the legacy and success of previous editions, AMIMUN
                 has set a bar within the Indian Mun circuit with an
                 International base of participants. The secretariat of
                 AMIMUN’2021 hopes to follow the same path and bring you an
                 unparalleled debating experience while adapting to the current
-                world order. Amity International Model United Nations Conference
+                world order.<br> Amity International Model United Nations Conference
                 2021 is a platform for a boundless learning experience and a
                 place to voice your suppositions, opinions while learning the
                 skills of diplomacy. Through this conference, we wish that you
@@ -296,7 +298,7 @@
                 We look forward to the fervour and enthusiasm which the
                 delegates will bring with them thereby giving an encompassing
                 comprehensive experience and highlighting issues to deliberate
-                upon for a better future of humankind. I would also like to take
+                upon for a better future of humankind.<br> I would also like to take
                 this opportunity to thank our Founder President Sir, our Faculty
                 Coordinators, our Partners and Sponsors for their unremitting
                 support for e-AMIMUN&#39;21, and making this conference
