--- a/about.html
+++ b/about.html
@@ -131,20 +131,20 @@
             Amity International Model United Nations
           </h1>
           <p class="lead my-3">
-            The first online edition of Amity International Model United Nations
+            The first e-edition of Amity International Model United Nations
             is a simulation of the United Nations spanning over two days. At
             AMIMUN, delegates gain profound knowledge of diplomacy, global
             relations, and the inner workings of the United Nations. Through the
             past Nine Editions, AMIMUN has set a standard of MUNs throughout the
             Nation with its innovative themes. To continue the same legacy, the
-            first online edition of AMIMUN aims to create a platform where
+            first e-edition of AMIMUN aims to create a platform where
             deliberation on issues that address global problems and drafting
             resolutions will enhance critical thinking, public speaking, and
             leadership skills. Delegates will become conscious of the causes of
             conflict between nations. Thus, AMIMUN follows through with the
             Preamble to the Charter of the United Nations: "To practice
             tolerance and live together in peace with one another as good
-            neighbors”.
+            neighbours”.
           </p>
         </div>
       </div>
@@ -249,7 +249,7 @@
             <p class="lead">
               AMIMUN has successfully created a platform where delegates have
               had the option to master and refine their strategic abilities. The
-              online version of AMIMUN will encourage the manner of thinking to
+              e-edition AMIMUN will encourage the manner of thinking to
               create solutions for some grave world issues.
             </p>
           </div>
@@ -270,7 +270,7 @@
               to facilitate the highest quality of debate. Deliberation on
               challenging global issues will sharpen the members with the
               learnings of the United Nations and assist them with understanding
-              the current world request. .
+              the current world request.
             </p>
           </div>
           <div class="col-md-5">
@@ -359,7 +359,7 @@
               Diversity <span class="text-muted">& Mutual Respect</span>
             </h2>
             <p class="lead">
-              University nurtures an environment of safety, trust & mutual
+              Amity University nurtures an environment of safety, trust & mutual
               respect and embeds equality & diversity in its Strategy by
               ensuring that the strategic plans are fair and inclusive.
             </p>
