--- a/about.html
+++ b/about.html
@@ -131,20 +131,19 @@
             Amity International Model United Nations
           </h1>
           <p class="lead my-3">
-            The first e-edition of Amity International Model United Nations
-            is a simulation of the United Nations spanning over two days. At
-            AMIMUN, delegates gain profound knowledge of diplomacy, global
-            relations, and the inner workings of the United Nations. Through the
-            past Nine Editions, AMIMUN has set a standard of MUNs throughout the
-            Nation with its innovative themes. To continue the same legacy, the
-            first e-edition of AMIMUN aims to create a platform where
-            deliberation on issues that address global problems and drafting
-            resolutions will enhance critical thinking, public speaking, and
-            leadership skills. Delegates will become conscious of the causes of
-            conflict between nations. Thus, AMIMUN follows through with the
-            Preamble to the Charter of the United Nations: "To practice
-            tolerance and live together in peace with one another as good
-            neighbours”.
+            The first E-edition of Amity International Model United Nations is a
+            simulation of the United Nations spanning over two days. At AMIMUN,
+            delegates gain profound knowledge of diplomacy, global relations,
+            and the inner workings of the United Nations. Through the past nine
+            editions, AMIMUN has set a standard of MUNs throughout the Nation
+            with its innovative themes. To continue the same legacy, the first
+            E-edition of AMIMUN aims to create a platform where deliberation on
+            issues that address global problems and drafting resolutions will
+            enhance critical thinking, public speaking, and leadership skills.
+            Delegates will become conscious of the causes of conflict between
+            nations. Thus, AMIMUN follows through with the Preamble to the
+            Charter of the United Nations: "To practice tolerance and live
+            together in peace with one another as good neighbours”.
           </p>
         </div>
       </div>
@@ -217,16 +216,9 @@
               Creativity <span class="text-muted">& Innovation</span>
             </h2>
             <p class="lead">
-              Amity is made up of a multitude of people, from various
-              backgrounds, interact and work with one another. AMIMUN takes
-              advantage of this, allowing for a huge international platform,
-              where ideas can be propagated, opinions formed, and views widened.
-              Past editions of AMIMUN have been conducted in association with
-              international bodies like the United Nations Information Centre
-              for India and Bhutan (UNIC), Medecins Sans Frontieres, and Amnesty
-              International India, and included delegates and dignitaries from
-              Europe. AMIMUN truly is the best place to not only to showcase
-              one's talent but further grow as a delegate and an individual.
+              Amity University strives to promote creativity in terms of
+              education. We believe in the overall development of students
+              through participation in various disciplines and activities
             </p>
           </div>
           <div class="col-md-5">
@@ -249,8 +241,8 @@
             <p class="lead">
               AMIMUN has successfully created a platform where delegates have
               had the option to master and refine their strategic abilities. The
-              e-edition AMIMUN will encourage the manner of thinking to
-              create solutions for some grave world issues.
+              E-edition AMIMUN will encourage the manner of thinking to create
+              solutions for some grave world issues.
             </p>
           </div>
           <div class="col-md-5 order-md-1">
@@ -449,9 +441,10 @@
               Environmental <span class="text-muted">Responsibility</span>
             </h2>
             <p class="lead">
-              Amity University is acutely aware of its environmental responsibilities
-              and embraces principle of sustainable development to ensure that
-              any adverse environmental impact of its activities is minimized.
+              Amity University is acutely aware of its environmental
+              responsibilities and embraces principle of sustainable development
+              to ensure that any adverse environmental impact of its activities
+              is minimized.
             </p>
           </div>
           <div class="col-md-5">
@@ -468,10 +461,11 @@
           <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading">Service</h2>
             <p class="lead">
-              Amity University seeks to serve the diverse, personal and professional
-              development needs of its constituents and encourage the habit of
-              engagement, caring, and civic responsibility by emphasizing a
-              connection between service, excellence, and career growth.
+              Amity University seeks to serve the diverse, personal and
+              professional development needs of its constituents and encourage
+              the habit of engagement, caring, and civic responsibility by
+              emphasizing a connection between service, excellence, and career
+              growth.
             </p>
           </div>
           <div class="col-md-5 order-md-1">
