--- a/committees-gallery.html
+++ b/committees-gallery.html
@@ -12,7 +12,7 @@
       integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
       crossorigin="anonymous"
     />
-     <link
+    <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
@@ -153,8 +153,10 @@
                 <div class="card-body" style="background-color: #f4f4f4">
                   <h3>United Nations General Assembly</h3>
                   <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content.
+                    The First Committee deals with disarmament, global
+                    challenges and threats to peace that affect the
+                    international community and seeks out solutions to the
+                    challenges in the international security regime.
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
@@ -182,8 +184,9 @@
                 <div class="card-body" style="background-color: #f4f4f4">
                   <h3>World Health Assembly</h3>
                   <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content.
+                    The World Health Assembly (WHA) is the forum through which
+                    the World Health Organization (WHO) is governed by its 194
+                    member states.
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
@@ -211,8 +214,8 @@
                 <div class="card-body" style="background-color: #f4f4f4">
                   <h3>Counter Terrorism Committee</h3>
                   <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content.
+                    The Counter-Terrorism Committee is a subsidiary body of the
+                    United Nations Security Council.
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
@@ -241,8 +244,9 @@
                 <div class="card-body" style="background-color: #f4f4f4">
                   <h3>United Nations Human Right Council</h3>
                   <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content.
+                    Despite living in an era of progress, human rights
+                    violations are increasingly prevalent in the current
+                    discourse.
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
@@ -270,8 +274,8 @@
                 <div class="card-body" style="background-color: #f4f4f4">
                   <h3>All India Political Parties Meet</h3>
                   <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content.
+                    India has often been hailed globally as the most successful
+                    exercise in the idea of democracy.
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
@@ -300,8 +304,11 @@
                   <h3>International Press Corps</h3>
 
                   <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content.
+                    "In a post-truth era, reportage not only defines access to
+                    information but also the perception of truth itself." At
+                    AMIMUN’21 we believe that the job of International Press is
+                    one that requires utmost commitment, sincerity and belief in
+                    the ideals of media itself.
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
