--- a/contact.html
+++ b/contact.html
@@ -144,59 +144,20 @@
       <!-- Second Row [Team]-->
       <section class="container rounded" style="background: #fff">
         <div class="row p-5 mb-4">
-          <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+          
+          <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 d-flex align-items-stretch">
             <!-- Card-->
             <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
                 <img
-                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
-                  alt=""
-                  class="w-100 card-img-top"
-                />
-                <div class="p-4">
-                  <h5 class="mb-0">Simran Malhotra</h5>
-                  <p class="small text-muted">Phone:</p>
-                  <p class="small text-muted">Email:</p>
-                  <ul class="social mb-0 list-inline mt-3">
-                    <li class="list-inline-item m-0">
-                      <a href="#" class="social-link"
-                        ><i class="fa fa-facebook-f"></i
-                      ></a>
-                    </li>
-                    <li class="list-inline-item m-0">
-                      <a href="#" class="social-link"
-                        ><i class="fa fa-twitter"></i
-                      ></a>
-                    </li>
-                    <li class="list-inline-item m-0">
-                      <a href="#" class="social-link"
-                        ><i class="fa fa-instagram"></i
-                      ></a>
-                    </li>
-                    <li class="list-inline-item m-0">
-                      <a href="#" class="social-link"
-                        ><i class="fa fa-linkedin"></i
-                      ></a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-            <!-- Card-->
-            <div class="card shadow-lg border-0 rounded">
-              <div class="card-body p-0">
-                <img
-                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-3_ybnq8v.jpg"
+                  src="./static/mesh-contact.jpeg"
                   alt=""
                   class="w-100 card-img-top"
                 />
                 <div class="p-4">
                   <h5 class="mb-0">Meshuwa K. Mawthoh</h5>
-                  <p class="small text-muted">Phone:</p>
-                  <p class="small text-muted">Email:</p>
+                  <p class="small text-muted">Phone: +91 7085490761</p>
+                  <p class="small text-muted">Email: meshuwa.mawthoh@student.amity.edu</p>
                   <ul class="social mb-0 list-inline mt-3">
                     <li class="list-inline-item m-0">
                       <a href="#" class="social-link"
@@ -224,19 +185,19 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+          <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 d-flex align-items-stretch">
             <!-- Card-->
             <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
                 <img
-                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799924/profile-4_s3fort.jpg"
+                  src="./static/Simran Malhotra.jpg"
                   alt=""
                   class="w-100 card-img-top"
                 />
                 <div class="p-4">
                   <h5 class="mb-0">Simran Malhotra</h5>
-                  <p class="small text-muted">Phone:</p>
-                  <p class="small text-muted">Email:</p>
+                  <p class="small text-muted">Phone: +91 9999090695</p>
+                  <p class="small text-muted">Email: simran.malhotra3@student.amity.edu</p>
                   <ul class="social mb-0 list-inline mt-3">
                     <li class="list-inline-item m-0">
                       <a href="#" class="social-link"
@@ -264,7 +225,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+          <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 d-flex align-items-stretch">
             <!-- Card-->
             <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
@@ -275,8 +236,8 @@
                 />
                 <div class="p-4">
                   <h5 class="mb-0">Rohan Nagpal</h5>
-                  <p class="small text-muted">Phone:</p>
-                  <p class="small text-muted">Email:</p>
+                  <p class="small text-muted">Phone: +91 9599441919</p>
+                  <p class="small text-muted">Email: rohan.nagpal@s.amity.edu</p>
                   <ul class="social mb-0 list-inline mt-3">
                     <li class="list-inline-item m-0">
                       <a href="#" class="social-link"
@@ -304,7 +265,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+          <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 mt-5 d-flex align-items-stretch">
             <!-- Card-->
             <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
@@ -314,9 +275,9 @@
                   class="w-100 card-img-top"
                 />
                 <div class="p-4">
-                  <h5 class="mb-0">Sonali Thakur</h5>
-                  <p class="small text-muted">Phone:</p>
-                  <p class="small text-muted">Email:</p>
+                  <h5 class="mb-0">Shubhangi Thakur</h5>
+                  <p class="small text-muted">Phone: +91 8700659269</p>
+                  <p class="small text-muted">Email: shubhangi.thakur1@student.amity.edu</p>
                   <ul class="social mb-0 list-inline mt-3">
                     <li class="list-inline-item m-0">
                       <a href="#" class="social-link"
