--- a/delegates/wha.html
+++ b/delegates/wha.html
@@ -112,7 +112,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="committees-gallery.html">Committees</a>
+              <a class="nav-link" href="../committees-gallery.html">Committees</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../gallery.html">Gallery</a>
@@ -134,7 +134,7 @@
           <h1 class="display-4 font-italic">World Health Assembly</h1>
           <p class="lead my-3">
             Amity International Model United Nations is a simulation of the
-            United Nations spanning over three days. At AMIMUN, delegates gain
+            United Nations spanning over two days. At AMIMUN, delegates gain
             in-depth knowledge of diplomacy, international relations, and the
             inner workings of the United Nations.
           </p>
@@ -151,7 +151,7 @@
 
         <div class="row featurette">
           <div class="col-md-7">
-            <h3>Agenda</h3>
+            <h3>Committee Introduction</h3>
             <p class="lead">
               The World Health Assembly (WHA) is the forum through which
               the World Health Organization (WHO) is governed by its 194 member
