--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container-fluid">
-        <a class="navbar-brand mx-1" href="index.html"
+        <a class="navbar-brand mx-1" href="https://amity.edu/"
           ><img src="./static/logo-main.svg" width="55px" alt=""
         /></a> | <a class="navbar-brand mx-1" href="index.html"
-          ><img src="./static/logo-header-scaled.svg" width="305px" alt=""
+          ><img src="./static/logo-header.png" width="305px" alt=""
         /></a>
         <button
           class="navbar-toggler"
@@ -301,7 +301,7 @@
                 upon for a better future of humankind.<br> I would also like to take
                 this opportunity to thank our Founder President Sir, our Faculty
                 Coordinators, our Partners and Sponsors for their unremitting
-                support for e-AMIMUN&#39;21, and making this conference
+                support for E-AMIMUN '21, and making this conference
                 possible. On behalf of the secretariat, I extend a warm
                 invitation to all delegates and hope this conference will be as
                 productive for you, both as an individual and as a delegate. For
