--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
       integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
       crossorigin="anonymous"
     />
-     <link
+    <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
@@ -131,14 +131,10 @@
         class="p-5 m-5 mx-auto text-grey rounded"
         style="background-color: #f5a98c"
       >
-        <div class="col-md-6 px-0">
-          <h1 class="display-4 font-italic">
-            Gallery
-          </h1>
+        <div class="px-0">
+          <h1 class="display-4 font-italic">Gallery</h1>
           <p class="lead my-3">
-            Multiple lines of text that form the lede, informing new readers
-            quickly and efficiently about what’s most interesting in this post’s
-            contents.
+            A visual walkthrough of the previous ninth edition of AMIMIUN
           </p>
         </div>
       </div>
@@ -453,20 +449,12 @@
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6 thumb">
             <a href="./static/WA_1-min.jpg" class="fancybox" rel="ligthbox">
-              <img
-                src="./static/WA_1-min.jpg"
-                class="zoom img-fluid"
-                alt=""
-              />
+              <img src="./static/WA_1-min.jpg" class="zoom img-fluid" alt="" />
             </a>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6 thumb">
             <a href="./static/WA_2-min.JPG" class="fancybox" rel="ligthbox">
-              <img
-                src="./static/WA_2-min.JPG"
-                class="zoom img-fluid"
-                alt=""
-              />
+              <img src="./static/WA_2-min.JPG" class="zoom img-fluid" alt="" />
             </a>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6 thumb">
@@ -480,7 +468,7 @@
           </div>
         </div>
       </div>
-      
+
       <!-- FOOTER -->
       <footer class="container mt-5">
         <hr class="featurette-divider" />
@@ -496,12 +484,16 @@
                 ></a>
               </li>
               <li class="list-inline-item m-0">
-                <a href="https://instagram.com/amimun21?igshid=ndh9t257dsh" class="social-link"
+                <a
+                  href="https://instagram.com/amimun21?igshid=ndh9t257dsh"
+                  class="social-link"
                   ><i class="fa fa-instagram"></i
                 ></a>
               </li>
               <li class="list-inline-item m-0">
-                <a href="https://www.linkedin.com/company/amimunconference/" class="social-link"
+                <a
+                  href="https://www.linkedin.com/company/amimunconference/"
+                  class="social-link"
                   ><i class="fa fa-linkedin"></i
                 ></a>
               </li></ul
